# oppo-max

./: 2 LABA.cpp  API_DOCUMENTATION.txt  CMakeLists.txt  GRADING_INSTRUCTIONS.txt  INDEX.txt  README.md  REPORT.txt  SUMMARY.txt  UML_DIAGRAM.txt  compile_and_run.bat  compile_improved.bat  compile_improved_debug.bat  compile_utf8.bat  improved_2_LABA.cpp  menu.txt  menu_with_tests.cpp  recompile_all.bat  run_program.bat  run_utf8.bat  runner.py  test_2_LABA.cpp
pr2_1_5/analysis/: benchmark_pg  docgen_run.txt  gmon.out  gprof_report.txt  improved_tests  improved_tests_san  improved_tests_ubsan  old_app  sanitizer_build.txt  sanitizer_run.txt  ubsan_run.txt
pr2_1_5/improved_version/: CMakeLists.txt  README.md
pr2_1_5/improved_version/docs/: API_DOCUMENTATION.md  class_diagram.puml
pr2_1_5/improved_version/include/menu/: Exceptions.h  MenuItem.h  MenuLineParser.h  MenuManager.h  MenuRepository.h
pr2_1_5/improved_version/src/: MenuLineParser.cpp  MenuManager.cpp  MenuRepository.cpp  benchmark.cpp  main.cpp
pr2_1_5/improved_version/tests/: test_main.cpp
pr2_1_5/improved_version/tools/: docgen.py
pr2_1_5/old_version/: CMakeLists.txt  README.md
pr2_1_5/old_version/include/: windows.h
